@@ -1,3 +1,8 @@
+2008-03-16  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/quick_select.py: Make it work better with tab lists 
+	and windows.
+
 2008-03-07  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* plugins/interface_view.py: Added some translator
